--- a/src/styles/passIndex.css
+++ b/src/styles/passIndex.css
@@ -1,16 +1,36 @@
 .singlePass{
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     padding: 20px 100px;
-    margin: 50px 0;
+    margin: 50px auto;
     background-color: #BCBCC8;
     border-color: #B0B0BF;
     border-width: calc(var(--border-width) * 1px);
     border-style: solid;
     border-radius: 7px;
+    align-items: center;
+    height: 10vh;
+    width: 60vw;
 }
 
 .passName {
     font-size: 30px;
     font-weight: bold;
+    width: 70%;
+    word-break: break-word;
+    padding: 0 10px;
+
+}
+
+.passInfo {
+    flex-grow: 1;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding-top: 20px;
+}
+
+.passInfo button{
+    width: 50%;
+    margin: 20px auto;
 }
