--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,15 @@
 @import "./styles/header.css";
 @import "./styles/passIndex.css";
 @import "./styles/securityReport.css";
+@import './landing/css/style.css';
 
 body{
   background-color: #D3D3DA;
   padding: 20px;
+}
+
+.not-app{
+  padding: 0px !important;
 }
 
 .App {
